<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>multiplayer</class>
 <widget class="QDialog" name="multiplayer">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>372</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <widget class="QPushButton" name="okBtn">
   <property name="geometry">
    <rect>
     <x>240</x>
     <y>330</y>
     <width>61</width>
     <height>27</height>
    </rect>
   </property>
   <property name="text">
    <string>Launch</string>
   </property>
  </widget>
  <widget class="QPushButton" name="voidBtn">
   <property name="geometry">
    <rect>
     <x>320</x>
     <y>330</y>
     <width>51</width>
     <height>27</height>
    </rect>
   </property>
   <property name="text">
    <string>Cancel</string>
   </property>
  </widget>
  <widget class="QLineEdit" name="nameBox">
   <property name="geometry">
    <rect>
     <x>110</x>
     <y>50</y>
     <width>113</width>
     <height>27</height>
    </rect>
   </property>
  </widget>
  <widget class="QLineEdit" name="passBox">
   <property name="geometry">
    <rect>
     <x>110</x>
     <y>90</y>
     <width>113</width>
     <height>27</height>
    </rect>
   </property>
  </widget>
  <widget class="QLineEdit" name="numBox">
   <property name="geometry">
    <rect>
     <x>110</x>
     <y>130</y>
     <width>113</width>
     <height>27</height>
    </rect>
   </property>
  </widget>
  <widget class="QRadioButton" name="fiveBtn">
   <property name="geometry">
    <rect>
     <x>100</x>
     <y>220</y>
     <width>102</width>
     <height>22</height>
    </rect>
   </property>
   <property name="text">
    <string>TestSet1</string>
   </property>
  </widget>
  <widget class="QRadioButton" name="sevBtn">
   <property name="geometry">
    <rect>
     <x>100</x>
     <y>260</y>
     <width>102</width>
     <height>22</height>
    </rect>
   </property>
   <property name="text">
    <string>TestSet2</string>
   </property>
  </widget>
  <widget class="QRadioButton" name="randBtn">
   <property name="geometry">
    <rect>
     <x>100</x>
     <y>300</y>
     <width>102</width>
     <height>22</height>
    </rect>
   </property>
   <property name="text">
    <string>TestSet3</string>
   </property>
  </widget>
  <widget class="QLabel" name="label">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>180</y>
     <width>91</width>
     <height>17</height>
    </rect>
   </property>
   <property name="text">
    <string>Player 1 name</string>
   </property>
  </widget>
  <widget class="QLabel" name="label_2">
   <property name="geometry">
    <rect>
     <x>30</x>
     <y>50</y>
     <width>71</width>
     <height>17</height>
    </rect>
   </property>
   <property name="text">
    <string>Game Name</string>
   </property>
  </widget>
  <widget class="QLabel" name="label_3">
   <property name="geometry">
    <rect>
     <x>30</x>
     <y>90</y>
     <width>55</width>
     <height>17</height>
    </rect>
   </property>
   <property name="text">
    <string>Password</string>
   </property>
  </widget>
  <widget class="QLabel" name="label_4">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>130</y>
     <width>91</width>
     <height>17</height>
    </rect>
   </property>
   <property name="text">
    <string>Player number</string>
   </property>
  </widget>
  <widget class="QLineEdit" name="playerBox">
   <property name="geometry">
    <rect>
     <x>110</x>
     <y>170</y>
     <width>113</width>
     <height>27</height>
    </rect>
   </property>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
